microservices/service-c/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-c
  labels:
    app: service-c
spec:
  replicas: 2
  selector:
    matchLabels:
      app: service-c
  template:
    metadata:
      labels:
        app: service-c
        owner: sre-team
        version: v1
      annotations:
        trivy.io/severity: "LOW"
    spec:
      containers:
        - name: service-c
          image: jaegertracing/example-hotrod
          ports:
            - containerPort: 8080
          resources:   # ✅ required by Kyverno
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
          securityContext:   # ✅ required by Kyverno
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 1000
            capabilities:
              drop: ["ALL"]
