microservices/service-c/destination-rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: service-c
spec:
  host: service-c
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
