microservices/service-c/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: service-c
spec:
  hosts:
    - "*"
  gateways:
    - sre-gateway
  http:
    - match:
        - uri:
            prefix: /service-c
      route:
        - destination:
            host: service-c
            subset: v1
            port:
              number: 80
